#5925 Avoid Flickering if FlyingContext appears/disappears

--- a/src-admin/styles.scss
+++ b/src-admin/styles.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: auto; // ress.css • v2.0.4 sets overflow-y: scroll
+}
+
 .container {
   padding: 0;
 }
